chapter-2 kubernetes-basics/the-project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes: 
        - name: shared-storage
          persistentVolumeClaim: 
            claimName: todo-pv-claim
      containers:
        - name: todo-app
          image: hugonaing/to-do-app:1.8
          imagePullPolicy: Always
          ports: 
            - containerPort: 3000
          volumeMounts:
            - name: shared-storage
              mountPath: /usr/src/app/files
