chapter-2 kubernetes-basics/the-project/manifests/nodeport_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: todo-app-svc
  name: todo-app-svc
spec:
  ports:
  - name: http
    nodePort: 30080
    protocol: TCP
    port: 8080
    targetPort: 3000
  selector:
    app: todo-app
  type: NodePort
status:
  loadBalancer: {}
