chapter-2 kubernetes-basics/the-project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - name: http
      port: 8080           # Ingress က လှမ်းခေါ်မည့် Service Port
      targetPort: 3000
