chapter-2 kubernetes-basics/the-project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: todo-app-ingress
  namespace: project
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: todo-app-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
